--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Build Docker image
-      run: docker build -t custom-java-chrome-ffmpeg .
+      run: docker build -t custom-adspower-env .
 
     - name: Save Docker image to tar file
       run: |
